alterando o local da rota de inserção de usuário e adição dessa rota no swagger
